--- a/public/less/desktop.less
+++ b/public/less/desktop.less
@@ -51,3 +51,38 @@ form {
     display: none;
 }
 
+.typeahead {
+//    background-color: #fff;
+}
+
+
+.tt-dropdown-menu {
+    width: 310px;
+    margin-top: -1px;
+    padding: 8px 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+       -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+            box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion {
+    padding: 12px 15px;
+    font-size: inherit;
+    line-height: inherit;
+
+    p {
+        margin: 0;
+    }
+}
+
+.tt-suggestion.tt-cursor {
+    padding: 12px 15px;
+    color: white;
+    background-color: #F15A29;
+}
