added cursor: pointer

--- a/public/less/desktop.less
+++ b/public/less/desktop.less
@@ -84,5 +84,6 @@ form {
 .tt-suggestion.tt-cursor {
     padding: 12px 15px;
     color: white;
+    cursor: pointer;
     background-color: #F15A29;
 }
