--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -134,14 +134,16 @@ html
                     | обновление прошивки
                 .block(style='clear:both;')
                     img(src='http://cardsmobile.ru/misc/spacer.png', width='1', height='80')
-            .block(style='background-color: #E0E0E0;')
-                .text
-                    h2 Как загрузить «Кошелёк»
-                    p Если ваш телефон входит в список совместимых моделей и официально приобретен в РФ, то приложение «Кошелёк» уже установлено в вашем телефоне.
-                    p Или вы можете скачать приложение, открыв эту страницу с мобильного телефона.
-
-             .block
-                .text
+        #download-action.slide
+            .wrapper
+                .block.right-floated
+                    .text
+                        h2 Как загрузить «Кошелёк»
+                        p Если ваш телефон входит в список совместимых моделей и официально приобретен в РФ, то приложение «Кошелёк» уже установлено в вашем телефоне.
+                        p Или вы можете скачать приложение, открыв эту страницу с мобильного телефона.
+        .slide
+            .block
+                .text.center
                     h2
                         | Мы сообщим вам о появлении «Кошелька»
                         br
@@ -153,7 +155,8 @@ html
                         input(type='submit', value='OK')
                     .row.thanks(style="text-align: center")
                         h2 Спасибо!
-        // FOOTER
+
+            // FOOTER
         #footer.slide
             .wrapper
                 .block.left-floated
