--- a/views/subscribe-form.jade
+++ b/views/subscribe-form.jade
@@ -17,21 +17,24 @@ html
                 input(type='text', name='name', placeholder='Ваше имя', value=data.name || '', required, autofocus)
                 small Для того, чтобы мы знали как к вам обращаться.
 
-                input(type='email', name='email', placeholder='Ваш e-mail', value=data.email || '',required)
+                input(type='email', name='email', placeholder='Ваш e-mail', value=data.email || '', required)
                 small На этот адрес мы отправим вам ссылку для скачивания приложения.
 
-                input(type='text', name='phone', placeholder='Ваш номер телефона', value=data.phone || '',required)
+                input(type='text', name='phone', placeholder='Ваш номер телефона', value=data.phone || '', required)
                 small Номер телефона — один из идентификаторов вас как пользователя «Кошелька».
 
-                input(type='text', name='model', placeholder='Ваша модель телефона', value=data.model || '',required)
+                //input(type='text', name='model', placeholder='Ваша модель телефона', value=data.model || '',required)
+                select(name='model', placeholder='Ваша модель телефона', required)
+                    option(value='') Ваша модель телефона
                 small Версии приложения могут различаться в зависимости от модели телефона.
 
-                label
-                    input(type='radio', name='version', value='4.4', checked=data.version === '4.4', required)
-                    | Android 4.4
-                label
-                    input(type='radio', name='version', value='5.0', checked=data.version === '5.0', required)
-                    | Android 5.0
+                .version
+                    label
+                        input(type='radio', name='version', value='4.4', checked=data.version === '4.4', required)
+                        | Android 4.4
+                    label
+                        input(type='radio', name='version', value='5.0', checked=data.version === '5.0', required)
+                        | Android 5.0
                 small Версия Android обязательно должна быть не меньше 4.4 (KitKat).
 
                 input(type='text', name='imei', placeholder='IMEI (Идентификационный код устройства)', value=data.imei || '',required)
@@ -41,12 +44,16 @@ html
 
                 label
                     input(type='checkbox', name='agree', value='yo!', checked=!!data.agree, required)
-                    | Я согласен с соглашением о неразглашении информации, а так же с тем,
+                    | Я согласен &nbsp;
+                    a(href='/cloud/terms.pdf') с соглашением о неразглашении информации
+                    |, а так же с тем,
                     | что организатор тестирования не несет никакой ответственности за любые убытки, причиненные в результате тестирования.
 
-                input(type='submit', value='OK')
+                input(type='submit', value='Отправить')
             .thanks.center
                 h2 Спасибо!
+                    br
+                    | Мы свяжемся с вами, когда начнется тестирование.
 
             script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
             script(src=route.PREFIX + '/public/bower/typehead.js/dist/typeahead.jquery.min.js')
