--- a/public/less/subscribe-form.less
+++ b/public/less/subscribe-form.less
@@ -53,6 +53,14 @@ form {
     display: block;
     margin: 20px auto;
 
+    p.error {
+        padding: 12px 15px;
+        margin: 1em 0;
+        border: 1px solid #ed8077;
+        background-color: #ffeded;
+        border-radius: 4px;
+    }
+
     input, select, textarea, button {
         padding: 12px 15px;
         border: 1px solid #aaa;
@@ -78,12 +86,18 @@ form {
 
     label {
         display: block;
+
+        &.error {
+            border-color: #EE4433;
+            background-color: #FFE5E5;
+        }
     }
 
     small {
         display: block;
-        margin: 0 0 20px;
+        margin: 0.25em 0 20px 1em;
         color: grey;
+        font-style: italic;
     }
 
     datalist {
@@ -98,7 +112,7 @@ form {
 
         label {
             display: inline-block;
-            width: 180px;
+            width: 140px;
             cursor: pointer;
         }
     }
@@ -111,7 +125,8 @@ form {
         -webkit-appearance: none;
     }
 
-    input.error {
+    textarea.error, select.error, input.error {
+        color: #420c07;
         border-color: #EE4433;
         background-color: #FFE5E5;
     }
@@ -153,4 +168,8 @@ form {
 
 .center {
     text-align: center;
+}
+
+.hidden {
+    display: none;
 }
