--- a/public/less/presskit.less
+++ b/public/less/presskit.less
@@ -40,58 +40,37 @@ h2 {
 }
 
 form {
-    width: 450px;
+    width: 430px;
     display: block;
     margin: 20px auto;
+    text-align: center;
 
     input, select, textarea, button {
         padding: 12px 15px;
         border: 1px solid #aaa;
-        border-radius: 4px;
+        border-radius: 3px;
         font-family: inherit;
         font-size: inherit;
         line-height: inherit;
         color: inherit;
         margin: 0;
-        width: 480px;
+        width: 450px;
     }
 
-    input[type="radio"], input[type="checkbox"]  {
-        max-width: 25px;
-        margin-right: 8px;
-    }
-
-    textarea {
-        min-height: 100px;
-        margin-bottom: 20px;
-    }
-
-
-    label {
-        display: block;
-
-        &.error {
-            border-color: #EE4433;
-            background-color: #FFE5E5;
-        }
-    }
-
-    small {
-        display: block;
-        margin: 0.25em 0 20px 1em;
-        color: grey;
-        font-style: italic;
+    input[type="email"] {
+        width: 230px;
     }
 
     input[type="submit"] {
-        margin-top: 20px;
+        width: 148px;
+        margin-left: 15px;
         border: 1px solid #F15A29;
         background-color: #F15A29;
         color: white;
         -webkit-appearance: none;
     }
 
-    textarea.error, select.error, input.error {
+    input.error {
         color: #420c07;
         border-color: #EE4433;
         background-color: #FFE5E5;
