--- a/public/less/cloud-subscribe.less
+++ b/public/less/cloud-subscribe.less
@@ -106,6 +106,12 @@ form {
         border-radius: 4px;
         text-align: center;
 
+        &.error {
+            color: #420c07;
+            border-color: #EE4433;
+            background-color: #FFE5E5;
+        }
+
         label {
             display: inline-block;
             width: 140px;
@@ -125,6 +131,10 @@ form {
         color: #420c07;
         border-color: #EE4433;
         background-color: #FFE5E5;
+    }
+
+    p#bottom {
+        display: none;
     }
 }
 
