--- a/views/presskit.jade
+++ b/views/presskit.jade
@@ -14,7 +14,7 @@ html
                 br
                 | о приложении «Кошелек»:
             br
-            input(type='email', name='email', placeholder='Ваш e-mail', autofocus)
+            input(type='email', name='email', placeholder='Ваш e-mail')
             input(type='submit', value='ПОДПИСАТЬСЯ')
         .thanks.center
             h2 Спасибо!
