remove autofocus again

--- a/views/cloud-subscribe.jade
+++ b/views/cloud-subscribe.jade
@@ -17,7 +17,7 @@ html
                 br
                 if error
                     p.error= error
-                input(type='text', name='name', placeholder='Имя', value=data.name || '', autofocus)
+                input(type='text', name='name', placeholder='Имя', value=data.name || '')
                 small Для того, чтобы мы знали как к вам обращаться.
 
                 input(type='email', name='email', placeholder='E-mail', value=data.email || '')
