--- a/views/cloud-subscribe.jade
+++ b/views/cloud-subscribe.jade
@@ -5,6 +5,7 @@ doctype html
 html
     head
         meta(charset='UTF-8')
+        meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
         link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600&subset=latin,cyrillic')
         link(rel='stylesheet', href=route.PREFIX + '/public/css/cloud-subscribe.css')
     body
