--- a/public/less/cloud-subscribe.less
+++ b/public/less/cloud-subscribe.less
@@ -49,7 +49,7 @@ p {
 
 
 form {
-    width: 480px;
+    max-width: 480px;
     display: block;
     margin: 20px auto;
 
@@ -62,6 +62,8 @@ form {
     }
 
     input, select, textarea, button {
+        display: block;
+        width: 100%;
         padding: 12px 15px;
         border: 1px solid #aaa;
         border-radius: 4px;
@@ -70,10 +72,15 @@ form {
         line-height: inherit;
         color: inherit;
         margin: 0;
-        width: 480px;
     }
 
-    input[type="radio"], input[type="checkbox"]  {
+    @media (max-width: 450px){
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    input[type="radio"], input[type="checkbox"] {
+        display: inline-block;
         max-width: 25px;
         margin-right: 8px;
     }
@@ -116,6 +123,13 @@ form {
             display: inline-block;
             width: 140px;
             cursor: pointer;
+        }
+
+        @media (max-width: 450px){
+            text-align: left;
+            label {
+                display: block;
+            }
         }
     }
 
