--- a/public/less/cloud-subscribe.less
+++ b/public/less/cloud-subscribe.less
@@ -85,6 +85,18 @@ form {
         margin-right: 8px;
     }
 
+    select.sticky {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    input[name="otherModel"] {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-top: 0;
+        display: none;
+    }
+
     textarea {
         min-height: 100px;
         margin-bottom: 20px;
