--- a/public/less/cloud-subscribe.less
+++ b/public/less/cloud-subscribe.less
@@ -124,6 +124,7 @@ form {
         border: 1px solid #aaa;
         border-radius: 4px;
         text-align: center;
+        background-color: white;
 
         &.error {
             color: #420c07;
