--- a/public/less/cloud-subscribe.less
+++ b/public/less/cloud-subscribe.less
@@ -75,8 +75,8 @@ form {
     }
 
     @media (max-width: 450px){
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-left: 12px;
+        margin-right: 12px;
     }
 
     input[type="radio"], input[type="checkbox"] {
@@ -88,14 +88,15 @@ form {
     select.sticky {
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
+        border-bottom: 0;
     }
 
     input[name="otherModel"] {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
-        border-top: 0;
         display: none;
     }
+
 
     textarea {
         min-height: 100px;
