--- a/views/cloud-subscribe.jade
+++ b/views/cloud-subscribe.jade
@@ -31,7 +31,7 @@ html
                     option(value='') Модель телефона
                     option(value='other') Другая модель
                 input(type='text', name='otherModel', placeholder='Модель телефона')
-                small.for-other-model Телефон должен быть с NFC-антенной и Android 4.4 KitKat или выше.
+                small.for-other-model.hidden Телефон должен быть с NFC-антенной и Android 4.4 KitKat или выше.
                 small.for-model Версии приложения могут различаться в зависимости от модели телефона.
 
                 .version
