--- a/public/less/cloud-subscribe.less
+++ b/public/less/cloud-subscribe.less
@@ -4,7 +4,7 @@
  */
 
 @font-family: 'Open Sans', sans-serif;
-@border-color: white;
+@border-color: #e4e4e4;
 
 * {
     box-sizing: border-box;
@@ -47,7 +47,6 @@ a {
 p {
     margin: 0 0 10px;
 }
-
 
 form {
     max-width: 480px;
