added notSupported message

--- a/views/landing.jade
+++ b/views/landing.jade
@@ -54,6 +54,9 @@ html(lang='en')
                                     li Послу загрузки файла запустите его и следуйте инструкциям
                         else
                             p Нет ссылки для скачивания
+                else if notSupported
+                    .row.mobile
+                        h2 Извините, Ваш браузер не поддерживается. Попробуйте открыть эту страницу из Google Chrome или Apple Safari
                 else
                     .row.mobile
                         p
