--- a/public/less/all.less
+++ b/public/less/all.less
@@ -154,6 +154,9 @@ input, button, select, textarea {
     p {
         margin: 15px 0 0;
     }
+    .not-supported {
+        padding: 10px 30px;
+    }
     h2 {
         font-style: normal;
         font-weight: 600;
