--- a/views/landing.jade
+++ b/views/landing.jade
@@ -56,12 +56,7 @@ html(lang='en')
                             p Нет ссылки для скачивания
                 else if notSupported
                     .row.mobile
-                        p.not-supported Лена, извини, твой браузер не поддерживается.
-                            br
-                            b :(
-                            br
-                            | Попробуй открыть эту страницу из Google Chrome или Apple Safari
-                        //p.not-supported
+                        p.not-supported
                             | Извините, Ваш браузер не поддерживается.
                             br
                             | Попробуйте открыть эту страницу из Google Chrome или Apple Safari
