Updated phones names (Konstantin asked)

--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -103,7 +103,7 @@ html
                 .block.model
                     img(src='http://cardsmobile.ru/model/htc-one-m7.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (M7)', title='HTC One (M7)')
                     br
-                    span.model-name HTC One (M7)
+                    span.model-name HTC One
                     br
                     | Входит в официальное
                     br
@@ -127,7 +127,7 @@ html
                 .block.model
                     img(src='http://cardsmobile.ru/model/htc-one-m8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One Dual-SIM (E8)', title='HTC One Dual-SIM (M8)')
                     br
-                    span.model-name HTC One Dual-SIM (M8)
+                    span.model-name HTC One (M8) dual sim
                     br
                     | Входит в официальное
                     br
