fix https issue

--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -3,29 +3,29 @@ html
     head
         meta(charset='UTF-8')
         title Приложение «Кошелёк» (NFC-Кошелек)
-        link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300&subset=latin,cyrillic,cyrillic-ext', rel='stylesheet', type='text/css')
-        link(rel='stylesheet', href='http://cardsmobile.ru/styles.css')
+        link(href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300&subset=latin,cyrillic,cyrillic-ext', rel='stylesheet', type='text/css')
+        link(rel='stylesheet', href='https://cardsmobile.ru/styles.css')
         link(rel='stylesheet', href=route.PREFIX + '/public/css/desktop.css')
-        link(rel='shortcut icon', href='http://cardsmobile.ru/misc/favicon.ico')
+        link(rel='shortcut icon', href='https://cardsmobile.ru/misc/favicon.ico')
         meta(name='viewport', content='width=980, user-scalable=yes')
         meta(name='description', content='Оплачивайте покупки и проезд в транспорте прикосновением телефона.')
         meta(name='keywords', content='NFC-Кошелек, NFC-платежи, MasterCard PayPass, VISA PayWave, NXP MiFare, Secure Element, TSM, Бесконтакт, CardsMobile')
         meta(property='og:type', content='website')
-        meta(property='og:url', content='http://cardsmobile.ru/')
+        meta(property='og:url', content='https://cardsmobile.ru/')
         meta(property='og:site_name', content='Приложение «Кошелёк»')
         meta(property='og:title', content='Приложение «Кошелёк»')
-        meta(property='og:image', content='http://cardsmobile.ru/misc/og-wallet.jpg')
+        meta(property='og:image', content='https://cardsmobile.ru/misc/og-wallet.jpg')
         meta(property='og:description', content='Оплачивайте покупки и проезд в транспорте прикосновением телефона. Приложение «Кошелёк» уже доступно на более чем полумиллионе Android-смартфонов.')
         script(type='application/ld+json').
             { "@context" : "http://schema.org",
             "@type" : "Organization",
-            "url" : "http://cardsmobile.ru",
-            "logo" : "http://cardsmobile.ru/logo/nfc-wallet.png",
+            "url" : "https://cardsmobile.ru",
+            "logo" : "https://cardsmobile.ru/logo/nfc-wallet.png",
             "contactPoint" : [
             { "@type" : "ContactPoint",
-            "telephone" : "+7-800-200-99-78",
-            "contactType" : "customer service"
-            } ] }
+                "telephone" : "+7-800-200-99-78",
+                "contactType" : "customer service"
+            }]}
     body
         script.
             var phones = !{phones};
@@ -33,14 +33,14 @@ html
         #header.slide
             .wrapper
                 .block.left-floated
-                    a(href='http://cardsmobile.ru/')
-                        img(src='http://cardsmobile.ru/logo/nfc-wallet.png', width='100', height='27', border='0', title='Кошелёк', alt='Кошелёк')
+                    a(href='https://cardsmobile.ru/')
+                        img(src='https://cardsmobile.ru/logo/nfc-wallet.png', width='100', height='27', border='0', title='Кошелёк', alt='Кошелёк')
                 .block.right-floated
                     #navigation
-                        a(href='http://cardsmobile.ru/') Приложение
+                        a(href='https://cardsmobile.ru/') Приложение
                         a.selected(href='/download/') Загрузить
-                        a(href='http://cardsmobile.ru/faq/') FAQ
-                        a(href='http://cardsmobile.ru/en/') English
+                        a(href='https://cardsmobile.ru/faq/') FAQ
+                        a(href='https://cardsmobile.ru/en/') English
         // MAIN HERO
         #download-hero.slide
             .wrapper
@@ -57,11 +57,11 @@ html
                             | Полная функциональность приложения доступна только на совместимых моделях телефонов, предназначенных для продажи на территории РФ, оснащенных  NFC-модулем и специальным микрочипом Secure Element. Количество поддерживаемых моделей постоянно увеличивается.
                         p Приложение «Кошелёк» уже доступно на более чем полумиллионе Android-смартфонов.
                 .block.brands
-                    img(src='http://cardsmobile.ru/logo/htc.png', width='110', height='50', border='0', vspace='0', hspace='25', alt='HTC', title='HTC')
-                    img(src='http://cardsmobile.ru/logo/philips.png', width='170', height='50', border='0', vspace='0', hspace='25', alt='Philips', title='Philips')
-                    img(src='http://cardsmobile.ru/logo/sony.png', width='165', height='50', border='0', vspace='0', hspace='25', alt='Sony', title='Sony')
+                    img(src='https://cardsmobile.ru/logo/htc.png', width='110', height='50', border='0', vspace='0', hspace='25', alt='HTC', title='HTC')
+                    img(src='https://cardsmobile.ru/logo/philips.png', width='170', height='50', border='0', vspace='0', hspace='25', alt='Philips', title='Philips')
+                    img(src='https://cardsmobile.ru/logo/sony.png', width='165', height='50', border='0', vspace='0', hspace='25', alt='Sony', title='Sony')
                 .block.model
-                    img(src='http://cardsmobile.ru/model/htc-one-m8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (M8)', title='HTC One (M8)')
+                    img(src='https://cardsmobile.ru/model/htc-one-m8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (M8)', title='HTC One (M8)')
                     br
                     span.model-name HTC One (M8)
                     br
@@ -69,7 +69,7 @@ html
                     br
                     | обновление прошивки
                 .block.model
-                    img(src='http://cardsmobile.ru/model/sony-xperia-z.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='Sony Xperia Z (C6603)', title='Sony Xperia Z (C6603)')
+                    img(src='https://cardsmobile.ru/model/sony-xperia-z.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='Sony Xperia Z (C6603)', title='Sony Xperia Z (C6603)')
                     br
                     span.model-name Sony Xperia Z (C6603)
                     br
@@ -77,7 +77,7 @@ html
                     br
                     | обновление прошивки
                 .block.model
-                    img(src='http://cardsmobile.ru/model/philips-xenium-w8555.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='Philips Xenium W8555', title='Philips Xenium W8555')
+                    img(src='https://cardsmobile.ru/model/philips-xenium-w8555.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='Philips Xenium W8555', title='Philips Xenium W8555')
                     br
                     span.model-name Philips Xenium W8555
                     br
@@ -85,7 +85,7 @@ html
                     br
                     | при производстве
                 .block.model
-                    img(src='http://cardsmobile.ru/model/htc-one-e8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (E8)', title='HTC One (E8)')
+                    img(src='https://cardsmobile.ru/model/htc-one-e8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (E8)', title='HTC One (E8)')
                     br
                     span.model-name HTC One (E8)
                     br
@@ -93,7 +93,7 @@ html
                     br
                     | обновление прошивки
                 .block.model
-                    img(src='http://cardsmobile.ru/model/htc-one-max.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One Max', title='HTC One Max')
+                    img(src='https://cardsmobile.ru/model/htc-one-max.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One Max', title='HTC One Max')
                     br
                     span.model-name HTC One Max
                     br
@@ -101,7 +101,7 @@ html
                     br
                     | обновление прошивки
                 .block.model
-                    img(src='http://cardsmobile.ru/model/htc-one-m7.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (M7)', title='HTC One (M7)')
+                    img(src='https://cardsmobile.ru/model/htc-one-m7.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One (M7)', title='HTC One (M7)')
                     br
                     span.model-name HTC One
                     br
@@ -109,7 +109,7 @@ html
                     br
                     | обновление прошивки
                 .block.model
-                    img(src='http://cardsmobile.ru/model/philips-xenium-w336.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='Philips Xenium W336', title='Philips Xenium W336')
+                    img(src='https://cardsmobile.ru/model/philips-xenium-w336.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='Philips Xenium W336', title='Philips Xenium W336')
                     br
                     span.model-name Philips Xenium W336
                     br
@@ -117,7 +117,7 @@ html
                     br
                     | при производстве
                 .block.model
-                    img(src='http://cardsmobile.ru/model/htc-one-sv.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One SV', title='HTC One SV')
+                    img(src='https://cardsmobile.ru/model/htc-one-sv.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One SV', title='HTC One SV')
                     br
                     span.model-name HTC One SV
                     br
@@ -125,7 +125,7 @@ html
                     br
                     | обновление прошивки
                 .block.model
-                    img(src='http://cardsmobile.ru/model/htc-one-m8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One Dual-SIM (E8)', title='HTC One Dual-SIM (M8)')
+                    img(src='https://cardsmobile.ru/model/htc-one-m8.png', width='200', height='300', border='0', vspace='5', hspace='5', alt='HTC One Dual-SIM (E8)', title='HTC One Dual-SIM (M8)')
                     br
                     span.model-name HTC One (M8) dual sim
                     br
@@ -133,7 +133,7 @@ html
                     br
                     | обновление прошивки
                 .block(style='clear:both;')
-                    img(src='http://cardsmobile.ru/misc/spacer.png', width='1', height='80')
+                    img(src='https://cardsmobile.ru/misc/spacer.png', width='1', height='80')
         #download-action.slide
             .wrapper
                 .block.right-floated
@@ -164,13 +164,13 @@ html
                         h2 Следите за нашими новостями в социальных сетях
                         p
                             a(href='http://vk.com/cardsmobile', target='_blank')
-                                img.social(src='http://cardsmobile.ru/icon/vkontakte.png', border='0', width='51', height='51', title='ВКонтакте', alt='В')
+                                img.social(src='https://cardsmobile.ru/icon/vkontakte.png', border='0', width='51', height='51', title='ВКонтакте', alt='В')
                             a(href='http://facebook.com/cardsmobile', target='_blank')
-                                img.social(src='http://cardsmobile.ru/icon/facebook.png', border='0', width='51', height='51', title='Facebook', alt='F')
+                                img.social(src='https://cardsmobile.ru/icon/facebook.png', border='0', width='51', height='51', title='Facebook', alt='F')
                             a(href='http://twitter.com/cardsmobile', target='_blank')
-                                img.social(src='http://cardsmobile.ru/icon/twitter.png', border='0', width='51', height='51', title='Twitter', alt='T')
+                                img.social(src='https://cardsmobile.ru/icon/twitter.png', border='0', width='51', height='51', title='Twitter', alt='T')
                             a(href='http://plus.google.com/103055276936254491051', rel='publisher', target='_blank')
-                                img.social(src='http://cardsmobile.ru/icon/gplus.png', border='0', width='51', height='51', title='Google Plus', alt='G')
+                                img.social(src='https://cardsmobile.ru/icon/gplus.png', border='0', width='51', height='51', title='Google Plus', alt='G')
                 .block.right-floated
                     .text
                         .vcard(itemscope='', itemtype='http://schema.org/Organization')
@@ -183,7 +183,7 @@ html
                                         abbr.value(title='+7-800-200-99-78') 8 (800) 200-99-78
                             p.terms
                                 span(itemprop='name')
-                                    a.fn.org.url(href='http://cardsmobile.ru/')
+                                    a.fn.org.url(href='https://cardsmobile.ru/')
                                         | Приложение «Кошелёк»
                                         br
                                         | Компания CardsMobile
