--- a/views/landing.jade
+++ b/views/landing.jade
@@ -10,12 +10,12 @@ html(lang='en')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(href=route.PREFIX + '/public/css/all.css', rel='stylesheet')
-        link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600&subset=latin,cyrillic', rel='stylesheet', type='text/css')
+        link(href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600&subset=latin,cyrillic', rel='stylesheet', type='text/css')
         link(href=route.PREFIX + '/favicon.ico', rel='shortcut icon' type='image/x-icon')
     body(class=pageName)
         .container-fluid
             .row.logo
-                a(href="http://cardsmobile.ru/")
+                a(href="https://cardsmobile.ru/")
             .row.banner
                 .col-sm-12
                     h2
@@ -123,7 +123,7 @@ html(lang='en')
             .row.copyright
                 p
                     | ©
-                    a(href='http://cardsmobile.ru')  Приложение «Кошелёк»
+                    a(href='https://cardsmobile.ru')  Приложение «Кошелёк»
                     |  2014
 
         script(src=route.PREFIX + '/public/bower/jquery/dist/jquery.min.js')
