--- a/views/presskit.jade
+++ b/views/presskit.jade
@@ -5,7 +5,7 @@ doctype html
 html
     head
         meta(charset='UTF-8')
-        link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600&subset=latin,cyrillic')
+        link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600&subset=latin,cyrillic')
         link(rel='stylesheet', href=route.PREFIX + '/public/css/presskit.css')
     body
         form(action=route.PREFIX + route.PRESSKIT_SUBSCRIBE, method='POST')
